--- a/index.html
+++ b/index.html
@@ -9,6 +9,53 @@
   </head>
 
   <body>
-    
+    <main>
+      <div class="top">
+        <div class="title-sec">
+          <h1 class="hero-title">
+            10,000+ of our users love our products.
+          </h1>
+          <p class="sub-title">
+            We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.  
+          </p>
+        </div>
+        <div class="ratings">
+          <ul class="rating-labels">
+            <li class="labels">
+              <div class="star-icons">
+                <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              </div>
+              Rated 5 Stars in Reviews
+            </li>
+            <li class="labels">
+              <div class="star-icons">
+                <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              </div>
+              Rated 5 Stars in Report Guru
+            </li>
+            <li class="labels">
+              <div class="star-icons">
+                <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              <img src="./images/icon-star.svg" alt="star-icon">
+              </div>
+              Rated 5 Stars in BestTech
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="reviews">
+      </div>
+    </main>
   </body>
 </html>
