--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="title-section">
           <h1>10,000+ of our users love our products.</h1>
           <p>
-            We only provide great products combined <br> with excellent customer service.
-            See what <br> our satisfied customers are saying about our services.
+            We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.
           </p>
         </div>
         <div class="star-ratings">
